--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -12,7 +12,12 @@
   with_dict: "{{ influxdb_service_ports }}"
   when: service_consul_running
 
-# docker run --rm -ti --name emqx -p 18083:18083 -p 1883:1883 emqx:latest
+- name: "Pull image {{ influxdb_image_name }}:{{ influxdb_image_tag }}"
+  docker_image:
+    name: "{{ influxdb_image_name }}"
+    tag: "{{ influxdb_image_tag }}"
+    source: pull
+
 - name: "Run image {{ influxdb_image_name }}:{{ influxdb_image_tag }} as service {{ influxdb_service_name }}"
   docker_container:
     name: "{{ influxdb_service_name }}"
@@ -22,7 +27,7 @@
     volumes:
       - "{{ influxdb_volume_name }}:/var/lib/influxdb"
     recreate: yes
-    restart_policy: "{{ influxdb_service_restart_policy }}"
+    restart_policy: always
     state: started
   register: influxdb_service_launched
 
